--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.8.4",
     "formik": "^2.4.6",
     "framer-motion": "^12.7.4",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
